--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,tsx,json}\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "react-redux": "^9.2.0",
     "classnames": "^2.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
