--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "pretty": "prettier --write \"./**/*.{js,jsx,tsx,json}\""
+    "pretty": "prettier --write \"./**/*.{js,jsx,tsx,json}\"",
+    "start-server": "node simple_api/server.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
